--- a/html/profile.html
+++ b/html/profile.html
@@ -50,41 +50,15 @@
                     <span class="text-capitalize">azonosító:</span>
                   </label>
                   <div class="col-11 col-md-7 position-relative">
-                    <div class="row">
-                      <div class="col-md-5">
-                        <input
-                          id="profile-id"
-                          class="form-control form-control-disabled"
-                          name="id"
-                          type="text"
-                          maxlength="300"
-                          ng-model="$root.user.id"
-                          disabled
-                        />
-                      </div>
-                      <div class="col-md-7">
-                        <div class="row mt-3 mt-md-0">
-                          <label
-                            for="profile-type"
-                            class="col-form-label col-md-6 text-md-end"
-                          >
-                            <i class="fa-solid fa-location-crosshairs me-1"></i>
-                            <span class="text-capitalize">típus:</span>
-                          </label>
-                          <div class="col-md-6">
-                            <input
-                              id="profile-type"
-                              class="form-control form-control-disabled"
-                              name="type"
-                              type="text"
-                              maxlength="300"
-                              ng-model="$root.user.type"
-                              disabled
-                            />
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+                    <input
+                      id="profile-id"
+                      class="form-control form-control-disabled"
+                      name="id"
+                      type="text"
+                      maxlength="300"
+                      ng-model="$root.user.id"
+                      disabled
+                    />
                   </div>
                 </div>
 
@@ -131,8 +105,7 @@
                       required
                       maxlength="100"
                       ng-model="$root.user.first_name"
-                      ng-clear-icon
-                    />
+                      ng-clear-icon>
                   </div>
                   <div
                     class="col-1 d-flex align-items-center justify-content-start ps-1"
@@ -143,30 +116,9 @@
                     >
                       &check;
                     </span>
-                  </div>
-                </div>
-
-                <!-- Middle name -->
-                <div class="row mb-3">
-                  <label
-                    for="profile-middle_name"
-                    class="col-form-label col-12 col-md-4 text-md-end"
-                  >
-                    <span class="text-capitalize">Középső név:</span>
-                  </label>
-                  <div class="col-11 col-md-7 position-relative">
-                    <input
-                      id="profile-middle_name"
-                      class="form-control"
-                      name="middle_name"
-                      type="text"
-                      placeholder="Középső név"
-                      spellcheck="false"
-                      autocomplete="off"
-                      maxlength="100"
-                      ng-model="$root.user.middle_name"
-                      ng-clear-icon
-                    />
+                    <span class="text-danger" ng-if="profileForm.first_name.$invalid && profileForm.first_name.$touched">
+                      Keresztnév kötelező!
+                    </span>
                   </div>
                 </div>
 
@@ -202,6 +154,9 @@
                       ng-class="{'invisible': profileForm.last_name.$invalid}"
                     >
                       &check;
+                    </span>
+                    <span class="text-danger" ng-if="profileForm.last_name.$invalid && profileForm.last_name.$touched">
+                      Vezetéknév kötelező!
                     </span>
                   </div>
                 </div>
@@ -242,6 +197,9 @@
                       ng-class="{'invisible': profileForm.born.$invalid}"
                     >
                       &check;
+                    </span>
+                    <span class="text-danger" ng-if="profileForm.born.$invalid && profileForm.born.$touched">
+                      Érvényes dátumot adjon meg!
                     </span>
                     <span
                       data-bs-toggle="tooltip"
@@ -291,43 +249,11 @@
                     >
                       &check;
                     </span>
+                    <span class="text-danger" ng-if="profileForm.gender.$invalid && profileForm.gender.$touched">
+                      Nem kötelező!
+                    </span>
                   </div>
                 </fieldset>
-
-                <!-- Image -->
-                <div class="row input-row mb-5">
-                  <div class="col-form-label col-12 col-md-4 text-md-end">
-                    <i class="fa-solid fa-image-portrait me-1"></i>
-                    <span class="text-capitalize"> kép: </span>
-                  </div>
-                  <div class="col-11 col-md-7 position-relative" style="height: 100px">
-                    <input
-                      id="profile-image"
-                      name="image"
-                      type="file"
-                      accept="image/*"
-                      class="form-control form-control d-none"
-                      ng-model="helper.image"
-                      file-input
-                      ng-clear-icon='{"left":"160px"}'
-                    />
-                    <label for="profile-image">
-                      <div
-                        class="bg-img bg-img-cover overflow-hidden rounded-circle border d-flex align-items-center justify-content-center cursor-pointer"
-                        style="width: 130px; height: 130px"
-                        ng-style="{'background-image':model.mimeType?'url(data:'+model.mimeType+';base64,'+model.img+')':($root.user.gender?'url(./media/image/'+($root.user.gender==='F'?'fe':'')+'male-blank.webp)':'')}"
-                      >
-                        <span
-                          class="text-center text-muted"
-                          ng-show="!model.img && !$root.user.gender"
-                        >
-                          <i class="fa-solid fa-upload"></i><br />
-                          <span class="fs-sm">Max: 64KB</span>
-                        </span>
-                      </div>
-                    </label>
-                  </div>
-                </div>
 
                 <!-- Country -->
                 <div class="row input-row mb-3">
@@ -389,11 +315,24 @@
                         autocomplete="off"
                         maxlength="10"
                         ng-model="model.phone"
-                        ng-pattern="/^$|^(?!(0))[0-9]{7,10}$/"
-                        ng-allow-numbers
+                        ng-pattern="/^[1-9][0-9]{6,9}$/"
+                        required
                         ng-clear-icon='{"right":"8px"}'
                       />
                     </div>
+                  </div>
+                  <div
+                    class="col-1 d-flex align-items-center justify-content-start ps-1"
+                  >
+                    <span
+                      class="fw-bolder text-success"
+                      ng-class="{'invisible': profileForm.phone.$invalid}"
+                    >
+                      &check;
+                    </span>
+                    <span class="text-danger" ng-if="profileForm.phone.$invalid && profileForm.phone.$touched">
+                      Érvényes telefonszámot adjon meg!
+                    </span>
                   </div>
                 </div>
 
@@ -440,11 +379,26 @@
                       class="form-control"
                       spellcheck="false"
                       autocomplete="off"
-                      maxlength="10"
+                      maxlength="4"
                       ng-model="model.postcode"
+                      ng-pattern="/^[0-9]{4}$/"
+                      required
                       style="max-width: 120px"
                       ng-clear-icon='{"left":"110px"}'
                     />
+                  </div>
+                  <div
+                    class="col-1 d-flex align-items-center justify-content-start ps-1"
+                  >
+                    <span
+                      class="fw-bolder text-success"
+                      ng-class="{'invisible': profileForm.postcode.$invalid}"
+                    >
+                      &check;
+                    </span>
+                    <span class="text-danger" ng-if="profileForm.postcode.$invalid && profileForm.postcode.$touched">
+                      Érvényes irányítószámot adjon meg!
+                    </span>
                   </div>
                 </div>
 
@@ -476,14 +430,12 @@
                 <!-- Save button -->
                 <div class="row justify-content-end">
                   <button
-                    type="button"
-                    data-bs-toggle="modal"
-                    data-bs-target="#modalRequest"
-                    class="mt-2 btn btn-primary w-auto px-5 me-3 text-capitalize"
-                    ng-disabled="profileForm.$invalid || !isModified"
-                    ng-click="methods.httpRequest()">
-                    Mentés
-                  </button>
+                        type="button"
+                        class="btn btn-primary"
+                        ng-disabled="profileForm.$invalid || !isModified"
+                        ng-click="methods.httpRequest()">
+                        Mentés
+                    </button>
                 </div>
               </form>
             </div>
@@ -537,6 +489,7 @@
               {{ time }}
             </button>
           </div>
+
 
           <!-- Foglalás gomb -->
           <div class="mt-4">
