Regisztráció php és User felület adatok megejelenítése és módosítása html és php.

--- a/html/profile.html
+++ b/html/profile.html
@@ -57,8 +57,7 @@
                       type="text"
                       maxlength="300"
                       ng-model="$root.user.id"
-                      disabled
-                    />
+                      disabled>
                   </div>
                 </div>
 
@@ -66,8 +65,7 @@
                 <div class="row mb-3">
                   <label
                     for="profile-email"
-                    class="col-form-label col-12 col-md-4 text-md-end"
-                  >
+                    class="col-form-label col-12 col-md-4 text-md-end">
                     <i class="fa-solid fa-envelope me-1"></i>
                     <span class="text-capitalize">e-mail:</span>
                   </label>
@@ -78,8 +76,7 @@
                       name="email"
                       type="text"
                       ng-model="$root.user.email"
-                      disabled
-                    />
+                      disabled>
                   </div>
                 </div>
 
@@ -87,8 +84,7 @@
                 <div class="row mb-3">
                   <label
                     for="profile-first_name"
-                    class="col-form-label col-12 col-md-4 text-md-end"
-                  >
+                    class="col-form-label col-12 col-md-4 text-md-end">
                     <i class="fa-solid fa-user fa-2xl me-1"></i>
                     <i class="fa-solid fa-star fa-2xs text-danger"></i>
                     <span class="text-capitalize">Keresztnév:</span>
@@ -102,23 +98,9 @@
                       placeholder="Keresztnév"
                       spellcheck="false"
                       autocomplete="off"
-                      required
                       maxlength="100"
                       ng-model="$root.user.first_name"
                       ng-clear-icon>
-                  </div>
-                  <div
-                    class="col-1 d-flex align-items-center justify-content-start ps-1"
-                  >
-                    <span
-                      class="fw-bolder text-success"
-                      ng-class="{'invisible': profileForm.first_name.$invalid}"
-                    >
-                      &check;
-                    </span>
-                    <span class="text-danger" ng-if="profileForm.first_name.$invalid && profileForm.first_name.$touched">
-                      Keresztnév kötelező!
-                    </span>
                   </div>
                 </div>
 
@@ -126,8 +108,7 @@
                 <div class="row mb-3">
                   <label
                     for="profile-last_name"
-                    class="col-form-label col-12 col-md-4 text-md-end"
-                  >
+                    class="col-form-label col-12 col-md-4 text-md-end">
                     <i class="fa-solid fa-star fa-2xs text-danger"></i>
                     <span class="text-capitalize">Vezetéknév:</span>
                   </label>
@@ -140,74 +121,21 @@
                       placeholder="Vezetéknév"
                       spellcheck="false"
                       autocomplete="off"
-                      required
                       maxlength="100"
                       ng-model="$root.user.last_name"
-                      ng-clear-icon
-                    />
-                  </div>
-                  <div
-                    class="col-1 d-flex align-items-center justify-content-start ps-1"
-                  >
-                    <span
-                      class="fw-bolder text-success"
-                      ng-class="{'invisible': profileForm.last_name.$invalid}"
-                    >
-                      &check;
-                    </span>
-                    <span class="text-danger" ng-if="profileForm.last_name.$invalid && profileForm.last_name.$touched">
-                      Vezetéknév kötelező!
-                    </span>
+                      ng-clear-icon>
                   </div>
                 </div>
 
-                <!-- Born -->
+                <!--Születési idő-->
                 <div class="row mb-3">
-                  <label
-                    for="profile-born"
-                    class="col-form-label col-12 col-md-4 text-md-end"
-                  >
-                    <i class="fa-solid fa-star fa-2xs text-danger"></i>
+                  <label for="profile-born" class="col-form-label col-md-4 text-md-end">
                     <i class="fa-solid fa-calendar-days me-1"></i>
                     <span class="text-capitalize">születési idő:</span>
                   </label>
                   <div class="col-11 col-md-7 position-relative">
-                    <input
-                      id="profile-born"
-                      class="form-control"
-                      name="born"
-                      type="date"
-                      placeholder="2000-12-12"
-                      spellcheck="false"
-                      autocomplete="off"
-                      max="{{helper.maxBorn}}"
-                      min="{{helper.minBorn}}"
-                      required
-                      maxlength="300"
-                      ng-model="model.born"
-                      ng-disable-space
-                      ng-clear-icon
-                    />
-                  </div>
-                  <div
-                    class="col-1 d-flex align-items-center justify-content-start ps-1"
-                  >
-                    <span
-                      class="fw-bolder text-success"
-                      ng-class="{'invisible': profileForm.born.$invalid}"
-                    >
-                      &check;
-                    </span>
-                    <span class="text-danger" ng-if="profileForm.born.$invalid && profileForm.born.$touched">
-                      Érvényes dátumot adjon meg!
-                    </span>
-                    <span
-                      data-bs-toggle="tooltip"
-                      data-bs-custom-class="custom-tooltip"
-                      data-bs-html="true"
-                      data-bs-title="&lt;p class='my-1'>Csak 16 éven felülieknek!&lt;/p>"
-                    >
-                      <i class="fa-solid fa-circle-info text-primary ms-2"></i>
+                    <span id="profile-born" class="form-control form-control-disabled">
+                      {{ user.born || 'Nincs megadva' }}
                     </span>
                   </div>
                 </div>
@@ -220,38 +148,22 @@
                     <span class="text-capitalize"> neme: </span>
                   </legend>
                   <div
-                    class="col-11 col-md-7 position-relative d-flex align-items-center"
-                  >
+                    class="col-11 col-md-7 position-relative d-flex align-items-center">
                     <div
                       class="form-check form-check-inline me-4"
-                      ng-repeat="x in ['Nő','Férfi'] track by $index"
-                    >
+                      ng-repeat="x in ['Nő','Férfi'] track by $index">
                       <input
                         id="profile-{{x}}"
                         name="gender"
                         type="radio"
                         ng-value="x === 'Nő' ? 'F' : 'M'"
                         class="form-check-input"
-                        ng-model="$root.user.gender"
-                        required
-                      />
+                        ng-model="user.gender"
+                        required>
                       <label for="profile-{{x}}" class="form-check-label opacity-100">
                         {{x}}
                       </label>
                     </div>
-                  </div>
-                  <div
-                    class="col-1 d-flex align-items-center justify-content-start ps-1"
-                  >
-                    <span
-                      class="fw-bolder text-success"
-                      ng-class="{'invisible': profileForm.gender.$invalid}"
-                    >
-                      &check;
-                    </span>
-                    <span class="text-danger" ng-if="profileForm.gender.$invalid && profileForm.gender.$touched">
-                      Nem kötelező!
-                    </span>
                   </div>
                 </fieldset>
 
@@ -259,8 +171,7 @@
                 <div class="row input-row mb-3">
                   <label
                     for="profile-country"
-                    class="col-form-label col-12 col-md-4 text-md-end"
-                  >
+                    class="col-form-label col-12 col-md-4 text-md-end">
                     <i class="fa-solid fa-flag me-1"></i>
                     <span class="text-capitalize"> ország: </span>
                   </label>
@@ -274,9 +185,8 @@
                       spellcheck="false"
                       autocomplete="off"
                       maxlength="100"
-                      ng-model="model.country"
-                      ng-clear-icon
-                    />
+                      ng-model="user.country"
+                      ng-clear-icon>
                   </div>
                 </div>
 
@@ -284,8 +194,7 @@
                 <div class="row input-row mb-3">
                   <label
                     for="profile-phone"
-                    class="col-form-label col-12 col-md-4 text-md-end"
-                  >
+                    class="col-form-label col-12 col-md-4 text-md-end">
                     <i class="fa-solid fa-mobile-screen me-1"></i>
                     <span class="text-capitalize"> telefonszám: </span>
                   </label>
@@ -301,10 +210,9 @@
                         spellcheck="false"
                         autocomplete="off"
                         maxlength="10"
-                        ng-model="model.countryCode"
+                        ng-model="user.countryCode"
                         ng-clear-icon='{"left":"100px"}'
-                        style="max-width: 100px"
-                      />
+                        style="max-width: 100px">
                       <input
                         id="profile-phone"
                         name="phone"
@@ -314,20 +222,16 @@
                         spellcheck="false"
                         autocomplete="off"
                         maxlength="10"
-                        ng-model="model.phone"
+                        ng-model="user.phone"
                         ng-pattern="/^[1-9][0-9]{6,9}$/"
-                        required
-                        ng-clear-icon='{"right":"8px"}'
-                      />
+                        ng-clear-icon='{"right":"8px"}'>
                     </div>
                   </div>
                   <div
-                    class="col-1 d-flex align-items-center justify-content-start ps-1"
-                  >
+                    class="col-1 d-flex align-items-center justify-content-start ps-1">
                     <span
                       class="fw-bolder text-success"
-                      ng-class="{'invisible': profileForm.phone.$invalid}"
-                    >
+                      ng-class="{'invisible': profileForm.phone.$invalid}">
                       &check;
                     </span>
                     <span class="text-danger" ng-if="profileForm.phone.$invalid && profileForm.phone.$touched">
@@ -340,8 +244,7 @@
                 <div class="row input-row mb-3">
                   <label
                     for="profile-city"
-                    class="col-form-label col-12 col-md-4 text-md-end"
-                  >
+                    class="col-form-label col-12 col-md-4 text-md-end">
                     <i class="fa-solid fa-city me-1"></i>
                     <span class="text-capitalize"> város: </span>
                   </label>
@@ -355,9 +258,8 @@
                       spellcheck="false"
                       autocomplete="off"
                       maxlength="100"
-                      ng-model="model.city"
-                      ng-clear-icon
-                    />
+                      ng-model="user.city"
+                      ng-clear-icon>
                   </div>
                 </div>
 
@@ -365,8 +267,7 @@
                 <div class="row input-row mb-3">
                   <label
                     for="profile-postcode"
-                    class="col-form-label col-12 col-md-4 text-md-end"
-                  >
+                    class="col-form-label col-12 col-md-4 text-md-end">
                     <i class="fa-solid fa-list-ol me-1"></i>
                     <span class="text-capitalize"> irányítószám: </span>
                   </label>
@@ -380,20 +281,16 @@
                       spellcheck="false"
                       autocomplete="off"
                       maxlength="4"
-                      ng-model="model.postcode"
+                      ng-model="user.postcode"
                       ng-pattern="/^[0-9]{4}$/"
-                      required
                       style="max-width: 120px"
-                      ng-clear-icon='{"left":"110px"}'
-                    />
+                      ng-clear-icon='{"left":"110px"}'>
                   </div>
                   <div
-                    class="col-1 d-flex align-items-center justify-content-start ps-1"
-                  >
+                    class="col-1 d-flex align-items-center justify-content-start ps-1">
                     <span
                       class="fw-bolder text-success"
-                      ng-class="{'invisible': profileForm.postcode.$invalid}"
-                    >
+                      ng-class="{'invisible': profileForm.postcode.$invalid}">
                       &check;
                     </span>
                     <span class="text-danger" ng-if="profileForm.postcode.$invalid && profileForm.postcode.$touched">
@@ -406,8 +303,7 @@
                 <div class="row input-row mb-5">
                   <label
                     for="profile-address"
-                    class="col-form-label col-12 col-md-4 text-md-end"
-                  >
+                    class="col-form-label col-12 col-md-4 text-md-end">
                     <i class="fa-solid fa-location-dot me-1"></i>
                     <span class="text-capitalize"> cím: </span>
                   </label>
@@ -420,9 +316,8 @@
                       spellcheck="false"
                       autocomplete="off"
                       rows="1"
-                      ng-model="model.address"
-                      ng-clear-icon
-                    >
+                      ng-model="user.address"
+                      ng-clear-icon>
                     </textarea>
                   </div>
                 </div>
@@ -430,12 +325,13 @@
                 <!-- Save button -->
                 <div class="row justify-content-end">
                   <button
-                        type="button"
-                        class="btn btn-primary"
-                        ng-disabled="profileForm.$invalid || !isModified"
-                        ng-click="methods.httpRequest()">
-                        Mentés
-                    </button>
+                      type="button"
+                      class="btn btn-primary"
+                      ng-disabled="!isModified || profileForm.$invalid"
+                      ng-click="methods.httpRequest()">
+                      Mentés
+                  </button>
+
                 </div>
               </form>
             </div>
