load feeadbacks php leegyszerűsítése és js http kérés javitása page 2 radio btn szöveg aktiválása

--- a/html/page1.html
+++ b/html/page1.html
@@ -156,7 +156,7 @@
       <span class="carousel-control-prev-icon d-none" 
             aria-hidden="true">
       </span>
-      <span class="visually-hidden">
+      <span>
         Előző
       </span>
     </button>
@@ -168,7 +168,7 @@
             ng-if="(services | filter:filterServices).length > 3">
       <span class="carousel-control-next-icon d-none" 
             aria-hidden="true"></span>
-      <span class="visually-hidden">
+      <span>
         Következő
       </span>
     </button>
