--- a/html/register.html
+++ b/html/register.html
@@ -1,7 +1,7 @@
 <div class="container vh-100 d-flex justify-content-center align-items-center my-5">
   <div class="card shadow-lg text-white w-75" style="border-radius: 15px; overflow: hidden;">
     <div class="row g-0">
-      <!-- Regisztráció Form -->
+      <!-------Regisztráció Form-------------->
       <div 
         class="col-12 p-5 d-flex flex-column justify-content-center"
         ng-style="{'background-image': 'url(' + registration_bg + ')', 
@@ -15,16 +15,16 @@
 
         <form name="registerForm" novalidate>
           <div class="row">
-            <!-- Bal oldal -->
+            <!---------------Bal oldal----------------->
             <div class="col-md-6">
-              <!-- Vezetéktnév -->
+              <!--------------Vezetéknév---------------->
               <div class="mb-3">
                 <label for="register-last_name" class="form-label text-white">
                   <i class="fa-solid fa-user me-1"></i> Vezetéknév:
                 </label>
                 <input 
                   id="register-last_name"
-                  class="form-control bg-dark text-white border-secondary"
+                  class="form-control bg-dark text-white border-secondary rounded"
                   name="last_name" 
                   type="text"
                   placeholder="Vezetéknév"
@@ -33,14 +33,14 @@
                   ng-model="model.register.last_name">
               </div>
 
-              <!-- Keresztnév -->
+              <!----------------Keresztnév---------------------->
               <div class="mb-3">
                 <label for="register-first_name" class="form-label text-white">
                   <i class="fa-solid fa-user me-1"></i> Keresztnév:
                 </label>
                 <input 
                   id="register-first_name"
-                  class="form-control bg-dark text-white border-secondary"
+                  class="form-control bg-dark text-white border-secondary rounded"
                   name="first_name" 
                   type="text"
                   placeholder="Keresztnév"
@@ -49,14 +49,14 @@
                   ng-model="model.register.first_name">
               </div>
 
-              <!-- Születési idő -->
+              <!-------------Születési idő---------------------->
               <div class="mb-3">
                 <label for="register-born" class="form-label text-white">
                   <i class="fa-solid fa-calendar-days me-1"></i> Születési idő:
                 </label>
                 <input 
                   id="register-born"
-                  class="form-control bg-dark text-white border-secondary"
+                  class="form-control bg-dark text-white border-secondary rounded"
                   name="born" 
                   type="date"
                   max="{{helper.maxBorn}}"
@@ -68,7 +68,36 @@
                   ng-model="model.register.born">
               </div>
 
-              <!-- Neme -->
+              <!---------------Telefonszám----------------->
+              <div class="mb-3">
+                <label for="register-phone" class="form-label text-white">
+                  <i class="fa-solid fa-mobile-screen me-1"></i> Telefonszám:
+                </label>
+                <div class="input-group">
+                  <input
+                    id="profile-countryCode"
+                    name="countryCode"
+                    type="text"
+                    placeholder="+36"
+                    class="form-control bg-dark text-white border-secondary rounded"
+                    autocomplete="off"
+                    maxlength="10"
+                    ng-model="model.register.countryCode"
+                    style="max-width: 100px;">
+                  <input
+                    id="profile-phone"
+                    name="phone"
+                    type="tel"
+                    placeholder="Telefonszám"
+                    class="form-control bg-dark text-white border-secondary rounded"
+                    autocomplete="off"
+                    maxlength="10"
+                    ng-model="model.register.phone"
+                    ng-pattern="/^[1-9][0-9]{6,9}$/">
+                </div>
+              </div>
+
+              <!-------------Neme------------->
               <div class="mb-3">
                 <label class="form-label text-white">
                   <i class="fa-solid fa-venus-mars me-1"></i> Neme:
@@ -96,16 +125,16 @@
               </div>
             </div>
 
-            <!-- Jobb oldal -->
+            <!---------------Jobb oldal----------------->
             <div class="col-md-6">
-              <!-- Email -->
+              <!---------------Email----------------->
               <div class="mb-3">
                 <label for="register-email" class="form-label text-white">
                   <i class="fa-solid fa-envelope me-1"></i> E-mail:
                 </label>
                 <input 
                   id="register-email"
-                  class="form-control bg-dark text-white border-secondary"
+                  class="form-control bg-dark text-white border-secondary rounded"
                   name="email" 
                   type="email"
                   placeholder="E-mail"
@@ -113,14 +142,14 @@
                   ng-model="model.register.email">
               </div>
 
-              <!-- Email megerősítés -->
+              <!------------Email megerősítés---------->
               <div class="mb-3">
                 <label for="register-emailConfirm" class="form-label text-white">
                   E-mail megerősítés:
                 </label>
                 <input 
                   id="register-emailConfirm"
-                  class="form-control bg-dark text-white border-secondary"
+                  class="form-control bg-dark text-white border-secondary rounded"
                   name="emailConfirm" 
                   type="email"
                   placeholder="E-mail megerősítés"
@@ -128,14 +157,14 @@
                   ng-model="model.register.emailConfirm">
               </div>
 
-              <!-- Jelszó -->
+              <!-----------------Jelszó---------------->
               <div class="mb-3">
                 <label for="register-password" class="form-label text-white">
                   <i class="fa-solid fa-key me-1"></i> Jelszó:
                 </label>
                 <input 
                   id="register-password"
-                  class="form-control bg-dark text-white border-secondary"
+                  class="form-control bg-dark text-white border-secondary rounded"
                   name="password" 
                   type="{{model.register.showPassword ? 'text' : 'password'}}"
                   placeholder="Jelszó"
@@ -145,14 +174,14 @@
                   ng-model="model.register.password">
               </div>
 
-              <!-- Jelszó megerősítés -->
+              <!--------------Jelszó megerősítés------------>
               <div class="mb-3">
                 <label for="register-passwordConfirm" class="form-label text-white">
                   Jelszó megerősítés:
                 </label>
                 <input 
                   id="register-passwordConfirm"
-                  class="form-control bg-dark text-white border-secondary"
+                  class="form-control bg-dark text-white border-secondary rounded"
                   name="passwordConfirm" 
                   type="{{model.register.showPassword ? 'text' : 'password'}}"
                   placeholder="Jelszó megerősítés"
@@ -162,7 +191,7 @@
                   ng-model="model.register.passwordConfirm">
               </div>
 
-              <!-- Jelszó mutat elrejt check -->
+              <!----------Jelszó mutat elrejt check--------->
               <div class="form-check mb-3">
                 <input 
                   id="register-showPassword"
@@ -177,7 +206,7 @@
             </div>
           </div>
 
-          <!-- Regisztráció Gomb -->
+          <!----------Regisztráció Gomb----------->
           <div class="text-center">
             <button 
               type="button"
