Regisztrációs felület javítása

--- a/html/register.html
+++ b/html/register.html
@@ -75,7 +75,7 @@
                 </label>
                 <div class="input-group">
                   <input
-                    id="profile-countryCode"
+                    id="register-countryCode"
                     name="countryCode"
                     type="text"
                     placeholder="+36"
@@ -85,7 +85,7 @@
                     ng-model="model.register.countryCode"
                     style="max-width: 100px;">
                   <input
-                    id="profile-phone"
+                    id="register-phone"
                     name="phone"
                     type="tel"
                     placeholder="Telefonszám"
